infra/k8s/prod-ssl/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.allow-http: "false"
    # nginx.ingress.kubernetes.io/hsts: "true"
    # nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
    # nginx.ingress.kubernetes.io/hsts-max-age: "31536000"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - backend-tixbee.khaftab.me
        - www.backend-tixbee.khaftab.me
      secretName: tixbee-tls
  rules:
    - host: backend-tixbee.khaftab.me
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000

          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000

          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000

          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000

          - path: /api/queue/?(.*)
            pathType: Prefix
            backend:
              service:
                name: queue-srv
                port:
                  number: 3000

    - host: www.backend-tixbee.khaftab.me
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000

          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000

          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000

          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000

          - path: /api/queue/?(.*)
            pathType: Prefix
            backend:
              service:
                name: queue-srv
                port:
                  number: 3000
# prod-ssl folder will be used when we trigger ssl workflow from github action. Since, the name, metadata and namsepace are same as infr/k8s/ingress-srv.yaml so, it will only update the ingress service with ssl configuration. (Won't create new ingress service)
